2021-03-22  Jacob Bachmeyer  <jcb@gnu.org>

	* configure: Regenerate.

	* runtest.exp, configure.ac, doc/version.texi: Update version.

	* config.guess, config.sub: Import from upstream.

	* MAINTAINERS: Acknowledge that Ben Elliston has left the project.

2021-03-15  Jacob Bachmeyer  <jcb@gnu.org>

	* Makefile.am, Makefile.in: Update accordingly.

	* contrib/compare_tests: Remove.  This file lacked a GPL notice.
	This file was imported from GCC many years ago.  The GCC version
	has benefited from continued development, while ours has not.

	* testsuite/runtest.libs/load_lib.exp: Remove.  This file lacked a
	GPL notice and an attempt to contact the contributor produced no
	response.  The tests in this file will need to be rewritten in any
	case; there is a bug in load_lib that they should expose and there
	is now additional infrastructure for tests of this type that was
	not available when this file was written.

2020-12-27  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.libs/libs.exp (process_test): Report running
	test scripts as each test script is run.
	Also, at top-level, sort the list of tests to run.

	* doc/dejagnu.texi (testsuite procedure): Remove noise word "api"
	from new "testsuite can call api" feature test API entrypoint.
	* lib/framework.exp (testsuite_can): Likewise.
	* testsuite/runtest.libs/testsuite_can.test: Likewise.
	* NEWS: Likewise.

2020-12-16  Jacob Bachmeyer  <jcb@gnu.org>

	* configure: Regenerate.

	* configure.ac: Remove Tcl version check.

	Apply patch from Nick Clifton:

	* baseboards/msp430-sim.exp: Add missing copyright and GPL notice.

	Apply patch from Dimitar Dimitrov:

	* baseboards/pru-sim.exp: New file.

	* Makefile.am (baseboard_DATA): Add pru-sim.exp to list.
	* Makefile.in (baseboard_DATA): Likewise.

2020-12-15  Jacob Bachmeyer  <jcb@gnu.org>

	* configure: Regenerate.
	* Makefile.in: Regenerate.

	* Makefile.am (RUNTEST): Explain override of Automake default.
